--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,9 @@
 services:
-- type: web
-  name: va-bot
+- type: worker
+  name: va-bot-worker
   env: python
-  plan: free
   buildCommand: "pip install -r requirements.txt"
-  startCommand: "./start.sh"
+  startCommand: "python3 worker_start.py"
   envVars:
     - key: EMAIL
       sync: false
